# youtube-digest

./: .env.example  .gitignore  README.md  debug_channel_resolver.py  docker-compose.yml  pyproject.toml  quick_transcript_test.py  resolve_channel_id.py  simple_transcript_test.py  start_digest_service.sh  start_services.sh  start_youtube_service.sh  test_api.py  test_end_to_end_pipeline.py  test_live_streams.py  test_multiple_videos.py  test_transcript_robust.py  test_transcripts.py  test_updated_backend.py  test_updated_transcripts.py  test_youtube_api.py
infrastructure/docker/nginx/: nginx.conf
notes/: Notes.md  Plan.md  Problems.md
qdrant_storage/: raft_state.json
qdrant_storage/collections/youtube_transcripts/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/youtube_transcripts/0/segments/0cecdc14-3b3f-43e2-a26f-0cc06590fbf6/: mutable_id_tracker.mappings
qdrant_storage/collections/youtube_transcripts/0/segments/387f7c27-b576-42f9-ab70-ecd26a273ec4/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/youtube_transcripts/0/segments/4a1cac2b-9775-4c2c-8731-51b00de2b787/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/youtube_transcripts/0/segments/6cfc9ad6-87ae-41fe-96a3-d6e2ded72d9a/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/youtube_transcripts/0/segments/7a7718ca-fa29-4f20-8ae7-7ba7a645d10a/: mutable_id_tracker.mappings  (+1 more)
scripts/: start.sh
services/automation/: AUTOMATION_GUIDE.md  Dockerfile  README.md  __init__.py  api.py  chunking_utils.py  health_monitor.py  models.py  pre_startup_tests.py  production.env  pyproject.toml  qdrant_vector_db.py  requirements.txt  retry_utils.py  run_pipeline.py  scheduler.py  start_automation.py  summarization_pipeline.py  supadata_rate_limiter.py  vector_db.py  youtube_creators_list.json
services/automation/data/: videos.json
services/automation/src/: __init__.py
services/digest-service/: Dockerfile  __init__.py
services/digest-service/app/: main.py
services/digest-service/app/api/: dependencies.py
services/digest-service/app/api/routes/: digests.py  pipeline.py
services/digest-service/app/core/: config.py
services/digest-service/app/services/: ai_client.py  digest_generator.py  quality_scorer.py
services/shared/database/: connection.py  models.py
services/shared/schemas/: common.py
services/youtube-service/: Dockerfile  __init__.py
services/youtube-service/app/: main.py
services/youtube-service/app/api/: dependencies.py
services/youtube-service/app/api/routes/: streams.py  transcripts.py
services/youtube-service/app/core/: config.py  logging.py
services/youtube-service/app/services/: youtube_client.py
services/youtube-service/app/utils/: cache.py  channel_resolver.py  monitoring.py
(+30 files in other folders)
