[project]
name = "yt-qdrant-etl"
version = "0.1.0"
description = "SupaData YouTube transcripts → Qdrant (hierarchy: channel→video→chunk)"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "qdrant-client>=1.9.0",
    "sentence-transformers>=3.0.1",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.4",
    "tqdm>=4.66.4",
    "pandas>=2.2.2",
    "supadata>=1.3.1",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "httpx>=0.28.1",
    "aiohttp>=3.12.15",
    "prometheus-client>=0.22.1",
    "numpy>=2.2.6",
    "psutil>=7.0.0",
    "schedule>=1.2.2",
    "google-generativeai>=0.8.5",
    "groq>=0.31.0",
]

[project.scripts]
yt-etl = "src.youtube_to_qdrant:main"
yt-search = "src.search_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]
